[workspace]
resolver = "2"
members = [
    "crates/seija-app",
    "crates/seija-core",
    "crates/seija-asset",
    "crates/seija-winit",
    "crates/seija-render",
    "crates/seija-transform",
    "crates/seija-gltf",
    "crates/seija-pbr",
    "crates/seija-skeleton3d",
    "crates/seija-deferred",
    "crates/seija-geometry",
    #"crates/tools/material-compiler",
    "crates/tools/mc-cli",
    "seija-examples"
]

[profile.release]
#lto = true
#strip = true
#opt-level = "z"