[workspace]
resolver = "2"
members = [
    "crates/seija-app",
    "crates/seija-core",
    "crates/seija-asset",
    "crates/seija-winit",
    "crates/seija-render",
    "crates/seija-transform",
    "crates/seija-gltf",
    "crates/seija-pbr",
    "crates/seija-skeleton3d",
    "crates/seija-deferred",
    "crates/seija-geometry",
    "crates/seija-input",
    "crates/seija-template",
    "crates/seija-ui",
    "crates/seija-2d",
    "crates/seija-text",
    #"crates/tools/material-compiler",
    "crates/tools/mc-cli",
    "crates/spritesheet",
    "crates/tools/ffi-parser",
    "crates/tools/gltf2template",
    "seija-examples",
    "crates/lib-seija",
    #"crates/quick-xml-ffi",
    "crates/lib-io-async"
]

[workspace.dependencies]
log = "0.4.17"
wgpu = {version = "0.15.1", features =["spirv"]}
simple_logger = "4.1.0"

[profile.release]
#lto = true
#strip = true
#opt-level = "z"