[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
#lto = true

[dependencies]
glam = "0.13.1"
bevy_transform = "0.5.0"
bevy_log = "0.5.0"
bevy_ecs = "0.5.0"
bevy_core = "0.5.0"
bevy_asset = "0.5.0"
bevy_app = "0.5.0"
bevy_window = "0.5.0"
bevy_winit = "0.5.0"
bevy_input = "0.5.0"
bevy_render = {version = "0.5.0",features = ["png"] } 
bevy_wgpu = "0.5.0"
lite-clojure-eval = { git = "https://github.com/seija-engine/lite-clojure", package = "lite-clojure-eval" }
seija-render = {path = "../seija-render"}
seija-2d = {path = "../seija-2d"}