[package]
name = "seija-examples"
version = "0.1.0"
edition = "2018"

build = "build.rs"

[build-dependencies]
material-compiler = {path = "../crates/tools/material-compiler"}

[dependencies]
seija-asset = {path = "../crates/seija-asset"}
seija-app = {path = "../crates/seija-app"}
seija-core = {path = "../crates/seija-core"}
seija-winit = {path = "../crates/seija-winit"}
seija-gltf = {path = "../crates/seija-gltf"}
seija-pbr = {path = "../crates/seija-pbr"}
seija-render = {path = "../crates/seija-render"}
seija-transform = {path = "../crates/seija-transform"}
lite-clojure-eval = {git = "https://github.com/seija-engine/lite-clojure.git"}
bevy_ecs = "0.5.0"
glam = "0.20.3"
env_logger = "*"
log = "*"