[package]
name = "seija-examples"
version = "0.1.0"
edition = "2018"


[build-dependencies]
material-compiler = {path = "../crates/tools/material-compiler"}

[dependencies]
seija-2d = {path = "../crates/seija-2d"}
seija-asset = {path = "../crates/seija-asset"}
seija-app = {path = "../crates/seija-app"}
seija-core = {path = "../crates/seija-core"}
seija-winit = {path = "../crates/seija-winit"}
seija-input = {path = "../crates/seija-input"}
seija-gltf = {path = "../crates/seija-gltf"}
seija-pbr = {path = "../crates/seija-pbr"}
seija-text = {path = "../crates/seija-text"}
seija-render = {path = "../crates/seija-render"}
seija-deferred = {path = "../crates/seija-deferred"}
seija-transform = {path = "../crates/seija-transform"}
seija-skeleton3d = {path = "../crates/seija-skeleton3d"}
seija-geometry = {path = "../crates/seija-geometry"}
seija-template = {path = "../crates/seija-template"}
seija-ui = {path = "../crates/seija-ui"}
spritesheet = {path = "../crates/spritesheet"}
seija-render-template = {path = "../crates/seija-render-template"}
lite-clojure-eval = {git = "https://github.com/seija-engine/lite-clojure.git"}
bevy_ecs = "0.9.0"
glam = "0.20.3"
env_logger = "*"
smallvec = "1.6.1"
log = "*"
