[package]
name = "seija-render"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
bevy_reflect = "0.5.0"
bevy_render = "0.5.0"
bevy_app = "0.5.0"
bevy_asset = {version = "0.5.0",features = []} 
lite-clojure-eval = { path = "../../lite-clojure/lite-clojure-eval",features=[]}
anyhow="1.0.41"