[package]
name = "lib-seija"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
seija-app = {path = "../seija-app"}
seija-core = {path = "../seija-core"}
seija-winit = {path = "../seija-winit"}
seija-transform = {path = "../seija-transform"}
seija-input = {path = "../seija-input"}
seija-asset = {path = "../seija-asset"}