[package]
name = "seija-2d"
version = "0.1.0"
edition = "2021"


[dependencies]
seija-transform = {path = "../seija-transform"}
bevy_ecs = "0.9.0"
seija-core = {path = "../seija-core"}
seija-render = {path = "../seija-render"}
seija-asset = {path = "../seija-asset"}
seija-app = {path = "../seija-app"}
seija-winit = {path = "../seija-winit"}
spritesheet = {path = "../spritesheet" }
wgpu = {workspace = true }
log = {workspace = true }