[package]
name = "seija-asset"
version = "0.1.0"
edition = "2018"


[dependencies]
bevy_ecs = "0.7.0"
seija-app = {path = "../seija-app"}
seija-core = {path = "../seija-core"}
uuid = "0.8.2"
rand = "0.8.0"
parking_lot = "0.11.1"
parking_lot_core = "0.8.5"
log = "0.4.17"
downcast-rs = "1.2.0"
relative-path = "1.7.2"
thiserror = "1.0.25"
async-trait = "0.1.57"