[package]
name = "seija-core"
version = "0.1.0"
edition = "2018"

[dependencies]
uuid = "0.8.2"
core-derive = { path = "./core-derive" }
raw-window-handle = "0.3.3"
bevy_ecs = "0.7.0"
seija-app = {path = "../seija-app"}
bytemuck = "1.7.2"
log = "0.4.14"
glam = "0.20.3"
smol = "1.2.5"
anyhow = "1.0.58"
smol_str = "*"