[package]
name = "seija-core"
version = "0.1.0"
edition = "2018"

[dependencies]
uuid = "0.8.2"
core-derive = { path = "./core-derive" }
raw-window-handle = "0.5.0"
bevy_ecs = "0.9.0"
seija-app = {path = "../seija-app"}
bytemuck = "1.7.2"
log = {workspace = true }
glam = "0.20.3"
smol = "1.2.5"
anyhow = "1.0.58"
smol_str = "0.1.20"
simple_logger = {workspace = true }