[package]
name = "seija-gltf"
version = "0.1.0"
edition = "2018"


[dependencies]
gltf = "1.0.0"
log = "0.4.16"
seija-render = {path = "../seija-render"}
seija-asset = {path = "../seija-asset"}
seija-transform = {path = "../seija-transform"}
seija-skeleton3d = {path = "../seija-skeleton3d"}
glam = "0.20.2"
bevy_ecs = "0.7.0"