[package]
name = "seija-gltf"
version = "0.1.0"
edition = "2018"


[dependencies]
gltf = "1.0.0"
log = "0.4.16"
seija-render = {path = "../seija-render"}
seija-asset = {path = "../seija-asset"}
seija-core = {path = "../seija-core"}
seija-app = {path = "../seija-app"}
seija-transform = {path = "../seija-transform"}
seija-skeleton3d = {path = "../seija-skeleton3d"}
glam = "0.20.2"
bevy_ecs = "0.7.0"
async-trait = "0.1.57"
relative-path = "1.7.2"
base64 = { version = "0.12.3" }