[package]
name = "seija-pbr"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.20.3"
bevy_ecs = "0.9.0"
anyhow = "1.0.58"
log = {workspace = true }
seija-render = {path = "../seija-render"}
seija-transform = {path = "../seija-transform"}
lite-clojure-eval = {git = "https://github.com/seija-engine/lite-clojure.git"}