[package]
name = "seija-render"
version = "0.1.0"
edition = "2018"

[dependencies]
seija-asset = {path = "../seija-asset"}
seija-app = {path = "../seija-app"}
seija-core = {path = "../seija-core"}
seija-winit = {path = "../seija-winit"}
seija-transform = {path = "../seija-transform"}
lite-clojure-eval = {git = "https://github.com/seija-engine/lite-clojure.git"}
serde_json = "1.0.64"
serde_derive = "1.0.136"
serde = "1.0.136"
uuid = "0.8.2"
bitflags = "1.2.1"
wgpu = "0.9.0"
futures-lite = "1.12.0"
bevy_ecs = "0.5.0"
raw-window-handle = "0.3.3"
thiserror = "1.0.25"
glam = "0.20.3"
num_enum = "0.5.1"
parking_lot = "0.11.1"
crossbeam-channel = "0.5.1"
fnv = "1.0.7"
once_cell = "1.8.0"
log = "0.4.14"
image = "0.23.14"
env_logger = "0.9.0"
glsl-pack-rtbase = {path = "../../../glsl-pack/glsl-pack-rtbase"}
fixedbitset = "0.4.1"