[package]
name = "seija-render"
version = "0.1.0"
edition = "2018"




[dependencies]
seija-asset = {path = "../seija-asset"}
seija-app = {path = "../seija-app"}
seija-core = {path = "../seija-core"}
seija-winit = {path = "../seija-winit"}
seija-transform = {path = "../seija-transform"}
seija-geometry = {path = "../seija-geometry"}
lite-clojure-eval = {git = "https://github.com/seija-engine/lite-clojure.git"}
lite-clojure-frp = {git = "https://github.com/seija-engine/lite-clojure.git"}
#lite-clojure-eval = {path = "../../../lite-clojure/lite-clojure-eval"}
#lite-clojure-frp = {path = "../../../lite-clojure/lite-clojure-frp"}
serde_json = "1.0.64"
serde_derive = "1.0.136"
serde = "1.0.136"
uuid = "0.8.2"
bitflags = "1.3.2"
wgpu = {workspace = true} 
futures-lite = "1.12.0"
bevy_ecs = "0.9.0"
raw-window-handle = "0.5.0"
thiserror = "1.0.25"
glam = "0.20.3"
num_enum = "0.5.1"
parking_lot = "0.11.1"
fnv = "1.0.7"
once_cell = "1.8.0"
log = {workspace = true }
image = {version = "0.24.5",features=["hdr"]} 
env_logger = "0.9.0"
glsl-pack-rtbase = {git = "https://github.com/seija-engine/glsl-pack.git"}
fixedbitset = "0.4.2"
anyhow = "1.0.58"
smol_str = "0.1.20"
relative-path = "1.7.2"