[package]
name = "seija-skeleton3d"
version = "0.1.0"
edition = "2021"


[dependencies]
glam = "0.20.3"
seija-transform = {path = "../seija-transform"}
seija-asset = {path = "../seija-asset"}
seija-core = {path = "../seija-core"}
seija-app = {path = "../seija-app"}
lazy_static = "1.4.0"
gltf = "1.0.0"