[package]
name = "seija-skeleton3d"
version = "0.1.0"
edition = "2021"


[dependencies]
glam = "0.20.3"
seija-transform = {path = "../seija-transform"}
seija-asset = {path = "../seija-asset"}
seija-core = {path = "../seija-core"}
seija-app = {path = "../seija-app"}
seija-render = {path = "../seija-render"}
lazy_static = "1.4.0"
bevy_ecs = "0.9.0"
gltf = "1.0.0"
log = "0.4.16"
lite-clojure-eval = {git = "https://github.com/seija-engine/lite-clojure.git"}