[package]
name = "seija-template"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = {version = "0.23.0" } 
smol_str = "*"
seija-app = {path = "../seija-app"}
seija-core = {path = "../seija-core"}
seija-asset = {path = "../seija-asset"}
seija-transform = {path = "../seija-transform"}
log = "0.4.16"
smallvec = "1.6.1"
thiserror = "1.0.25"