[package]
name = "seija-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.7.0"
seija-core = {path = "../seija-core"}
seija-app = {path = "../seija-app"}
seija-asset = {path = "../seija-asset"}
seija-render = {path = "../seija-render"}
seija-transform = {path = "../seija-transform"}
fnv = "1.0.7"
fixedbitset = "0.4.2"