[package]
name = "seija-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.9.0"
seija-core = {path = "../seija-core"}
seija-app = {path = "../seija-app"}
seija-asset = {path = "../seija-asset"}
seija-render = {path = "../seija-render"}
seija-transform = {path = "../seija-transform"}
seija-input = {path = "../seija-input" }
seija-winit = {path = "../seija-winit"}
spritesheet = {path = "../spritesheet" }
fnv = "1.0.7"
bitflags = "1.3.2"
fixedbitset = "0.4.2"
lazy_static = "1.4.0"
glyph_brush = "0.7.7"
smol = "1.2.5"
num_enum = "0.6.1"
wgpu = {workspace = true }
log = { workspace = true }
