[package]
name = "spritesheet"
version = "0.1.0"
edition = "2021"


[dependencies]
seija-asset = {path = "../seija-asset"}
seija-render = {path = "../seija-render"}
seija-core = {path = "../seija-core"}
seija-app = {path = "../seija-app"}
serde_json = "1.0.64"
serde = { version = "1.0.136", features = ["derive"] }
relative-path = "1.7.2"