[package]
name = "gltf2template"
version = "0.1.0"
edition = "2021"

[dependencies]
gltf = "1.0.0"
clap = {version = "4.0.29",features = ["derive"]} 
log = {workspace = true }
env_logger = "0.9.3"
anyhow = "1.0.66"
base64 = { version = "0.12.3" }
relative-path = "1.7.2"
serde = "1.0.147"
serde_json = "1.0.89"
xml-rs = "0.8.4"
glam = "0.22.0"