[package]
name = "material-compiler"
version = "0.1.0"
edition = "2018"

[dependencies]
walkdir = "2.3.2"
anyhow = "1.0.58"
log = "0.4.14"
env_logger = "0.8.4"
serde = "1.0.140"
serde_json = "1.0.64"
#lite-clojure-eval = {git = "https://github.com/seija-engine/lite-clojure.git"}
lite-clojure-eval = {path = "../../../../lite-clojure/lite-clojure-eval"}
glsl-pkg = {path = "../../../../glsl-pack/glsl-pkg"}
glsl-pack-rtbase = {path = "../../../../glsl-pack/glsl-pack-rtbase"}
glob = "0.3.0"
seija-render = {path = "../../seija-render"}
smol_str = "*"